# apertium-spa-arg

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  NEWS  README  an-es-unsupervised.make  an-es.prob  apertium-es-an.an-es.t1x  apertium-es-an.an.dix  apertium-es-an.an.tsx  apertium-es-an.es-an.dix  apertium-es-an.es-an.t1x  apertium-es-an.es.dix  apertium-es-an.es.tsx  apertium-es-an.post-an.dix  apertium-es-an.post-es.dix  apertium-es-an.trules-an-es.xml  apertium-es-an.trules-es-an.xml  apertium-spa-arg.arg-spa.lrx  apertium-spa-arg.arg-spa.t1x  apertium-spa-arg.spa-arg.dix  apertium-spa-arg.spa-arg.lrx  apertium-spa-arg.spa-arg.t1x  configure.ac  es-an-unsupervised.make  modes.xml  translate-to-default-equivalent.xsl
.github/workflows/: bilingual.yml
dev/: cion  inconsistency-summary.sh  inconsistency.sh  testvoc-summary.an-es.txt  testvoc-summary.arg-spa.txt  testvoc-summary.es-an.txt  testvoc-summary.spa-arg.txt  testvoc-summary.txt  testvoc.sh  wikipedia-greeting.an  wikipedia-greeting.es
test/: arg-spa-chunker-expected.txt  arg-spa-generator-expected.txt  arg-spa-input.txt  arg-spa-lex-expected.txt  arg-spa-morph-expected.txt  arg-spa-postgen-expected.txt  arg-spa-pretransfer-expected.txt  arg-spa-tagger-expected.txt  spa-arg-biltrans-expected.txt  spa-arg-disamb-expected.txt  spa-arg-input.txt  spa-arg-morph-expected.txt  spa-arg-postgen-expected.txt  spa-arg-pretransfer-expected.txt  tests.json
